Trying out css stuff

--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello world
+<link href='primary.css' rel='stylesheet' type='text/css' />
+<div class=templateholder>
+<div class=index_header> Hello world! </div>
+<div class=index_1 > </div>
+<div class=index_2 > </div> 
+<div class=index_3 > </div>
+<div class=index_4 > </div>
+<div class=index_5 > </div>
+</div>
+
