--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 <link href='primary.css' rel='stylesheet' type='text/css' />
 <div class=templateholder>
 <div class=index_header> Hello world! </div>
-<div class=index_1 > </div>
-<div class=index_2 > </div> 
-<div class=index_3 > </div>
-<div class=index_4 > </div>
-<div class=index_5 > </div>
+<div class=index_main > </div>
+<div class=index_col1 > </div> 
+<div class=index_col2 > Right column </div>
 </div>
 
