Random style changes

--- a/index.html
+++ b/index.html
@@ -1,8 +1,62 @@
+<html>
 <link href='primary.css' rel='stylesheet' type='text/css' />
-<div class=templateholder>
-<div class=index_header> Hello world! </div>
-<div class=index_main > </div>
-<div class=index_col1 > </div> 
-<div class=index_col2 > Right column </div>
+<body class=index_body>
+<!-- Main title and what not. -->
+<div class=index_header> 
+    <h1> Hello world! </h1>
 </div>
 
+<!-- Main stuff to read and what not. -->
+<div class=index_main>
+<p>
+Here shall begin all the very important
+updates to life and other things.
+This should always be up to date and
+not have any irrelevant unimportant objects
+on it.  This is definitely not repeating
+the same redundant statements over and over
+and over, but rather it is simply making
+it very clear that this website is for
+only very good and useful purposes.
+</p>
+</div>
+
+<!-- Main links and menu what not. -->
+<div class=index_col1> 
+<p>
+Sometimes the purpose of these git commits
+is to show that there is progress being made
+and to document and track those progresses
+in the name of progress and moving forward.
+</p>
+</div> 
+
+
+<!-- Not main links and menu what not. -->
+<div class=index_col2> 
+<p>Right column 
+this is not just filler
+this is actually very important
+information.
+don't stop reading this
+until you get to the very end.
+</p>
+
+<p>
+I am actually very curious how far down
+you will read, but I am rather more 
+curious in how far down this will go
+before something strange happens.
+I am not sure how the css deals with
+longer than the page text right now.
+</p>
+
+<p>
+Apparently it just falls off
+</p>
+</div>
+
+
+</body>
+
+</html>
