--- a/index.html
+++ b/index.html
@@ -53,6 +53,13 @@ longer than the page text right now.
 
 <p>
 Apparently it just falls off
+UNLESS you put 
+<pre>
+<code>
+overflow-y: auto;
+</code>
+</pre>
+into your style file.
 </p>
 </div>
 
