--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <html>
+<title>Home lowagner</title>
 <link href='primary.css' rel='stylesheet' type='text/css' />
-<body class=index_body>
+<body>
 <!-- Main title and what not. -->
-<div class=index_header> 
-    <h1> Hello world! </h1>
+<div class=header> 
+    <h2> Lucas O. Wagner </h2>
 </div>
 
 <!-- Main stuff to read and what not. -->
-<div class=index_main>
+<div class=main>
 <p>
 Here shall begin all the very important
 updates to life and other things.
@@ -20,48 +21,55 @@ it very clear that this website is for
 only very good and useful purposes.
 </p>
 </div>
+<!-- END main stuff to read and what not. -->
 
 <!-- Main links and menu what not. -->
-<div class=index_col1> 
+<div class=col1> 
+
 <p>
 Sometimes the purpose of these git commits
 is to show that there is progress being made
 and to document and track those progresses
 in the name of progress and moving forward.
 </p>
+
+<h4>Another menu</h4>
+
+<ul class=col2menu>
+
+<li><a href="LucasWagner-CV.pdf" target="lowCV">
+<span>My CV</span>
+</a></li>
+
+</ul>
+
 </div> 
+<!-- END main links and menu what not. -->
 
 
 <!-- Not main links and menu what not. -->
-<div class=index_col2> 
-<p>Right column 
-this is not just filler
-this is actually very important
-information.
-don't stop reading this
-until you get to the very end.
-</p>
+<div class=col2> 
 
-<p>
-I am actually very curious how far down
-you will read, but I am rather more 
-curious in how far down this will go
-before something strange happens.
-I am not sure how the css deals with
-longer than the page text right now.
-</p>
+<h4>Find me on...</h4>
 
-<p>
-Apparently it just falls off
-UNLESS you put 
-<pre>
-<code>
-overflow-y: auto;
-</code>
-</pre>
-into your style file.
-</p>
+<ul class=col2menu>
+
+<li><a href="http://scholar.google.com/citations?user=sbRpEIcAAAAJ&hl=en" target="lowscholar">
+<span>Google scholar</span>
+</a></li>
+
+<li><a href="http://www.github.com/lowagner" target="lowgithub">
+<span>Github</span>
+</a></li>
+
+<li><a href="http://uncalc.blogspot.com/" target="lowblog">
+<span>My Blog</span>
+</a></li>
+
+</ul>
+
 </div>
+<!-- END not main links and menu what not. -->
 
 
 </body>
