--- a/code.html
+++ b/code.html
@@ -9,46 +9,22 @@
 
 <!-- Main stuff to read and what not. -->
 <div class=main>
-<h3>Main</h3>
+<h3>Random coding projects</h3>
 
 <ul class=mainupdate>
 
 <li>
 <table>
 <tr>
-<td class=mainentrytitle>Furst entry:  testing how long</td>
-<td class=mainentrydate>circa 2014-03-07</td>
+<td class=mainentrytitle>PyanoH3ro</td>
+<td class=mainentrydate>2013-2014</td>
 </tr>
 </table>
 <p>
-Here shall begin all the very important
-updates to life and other things.
-This should always be up to date and
-not have any irrelevant unimportant objects
-on it.  This is definitely not repeating
-the same redundant statements over and over
-and over, but rather it is simply making
-it very clear that this website is for
-only very good and useful purposes.
+PyanoH3ro
 </p>
 </li>
 
-
-<li>
-<table>
-<tr>
-<td class=mainentrytitle>Furst entry:  testing how long</td>
-<td class=mainentrydate>circa 2014-03-07</td>
-</tr>
-</table>
-<p>
-This is actually a duplicate of the first entry.
-Why do you suppose I would do this to you?
-Why do you suppose I would do this to me?
-Why is the colors in the primary colors of light?
-That is unbeknownst.  You are becoming unbeknownst.
-</p>
-</li>
 
 
 
@@ -67,17 +43,17 @@ That is unbeknownst.  You are becoming unbeknownst.
 
 <ul class=colmenu>
 
-<li>
+<li><a href="index.html" title="Back to home">
 <span>Home</span>
-</li>
+</a></li>
 
 <li><a href="pub.html" title="My publications">
 <span>Publications</span>
 </a></li>
 
-<li><a href="code.html">
+<li> 
 <span title="Random programs">Code</span>
-</a></li>
+</li>
 
 <li><a href="about.html" title="About me">
 <span>About</span>
