--- a/pub.html
+++ b/pub.html
@@ -1,5 +1,5 @@
 <html>
-<title>Home lowagner</title>
+<title>Publications lowagner</title>
 <link href='primary.css' rel='stylesheet' type='text/css' />
 <body>
 <!-- Main title and what not. -->
@@ -9,47 +9,28 @@
 
 <!-- Main stuff to read and what not. -->
 <div class=main>
-<h3>Main</h3>
+<h3>Publications</h3>
 
 <ul class=mainupdate>
 
 <li>
 <table>
 <tr>
-<td class=mainentrytitle>Furst entry:  testing how long</td>
-<td class=mainentrydate>circa 2014-03-07</td>
+<td class=mainentrytitle>
+*.  
+<a href="pubs/BLAB.pdf">Beyond Burnside's Lemma </a>
+</td>
+<td class=mainentrydate>
+(2008)</td>
 </tr>
 </table>
 <p>
-Here shall begin all the very important
-updates to life and other things.
-This should always be up to date and
-not have any irrelevant unimportant objects
-on it.  This is definitely not repeating
-the same redundant statements over and over
-and over, but rather it is simply making
-it very clear that this website is for
-only very good and useful purposes.
+How to count the number of unique objects, painted various colors at
+different vertices, when group operations can rotate the object <i>and</i>
+permute the colors.
 </p>
+<p class=right>tags: group theory</p>
 </li>
-
-
-<li>
-<table>
-<tr>
-<td class=mainentrytitle>Furst entry:  testing how long</td>
-<td class=mainentrydate>circa 2014-03-07</td>
-</tr>
-</table>
-<p>
-This is actually a duplicate of the first entry.
-Why do you suppose I would do this to you?
-Why do you suppose I would do this to me?
-Why is the colors in the primary colors of light?
-That is unbeknownst.  You are becoming unbeknownst.
-</p>
-</li>
-
 
 
 </ul>
@@ -67,13 +48,13 @@ That is unbeknownst.  You are becoming unbeknownst.
 
 <ul class=colmenu>
 
-<li>
+<li><a href="index.html" title="Back to home">
 <span>Home</span>
-</li>
-
-<li><a href="pub.html" title="My publications">
-<span>Publications</span>
 </a></li>
+
+<li>
+<span>Publications</span>
+</li>
 
 <li><a href="code.html">
 <span title="Random programs">Code</span>
