added publications and reworking site look

--- a/about.html
+++ b/about.html
@@ -1,6 +1,7 @@
 <html>
-<title>Home lowagner</title>
+<title>About</title>
 <link href='primary.css' rel='stylesheet' type='text/css' />
+<link rel="shortcut icon" href="favicon.ico" />
 <body>
 <!-- Main title and what not. -->
 <div class=header> 
@@ -52,7 +53,7 @@ Hello
 </a></li>
 
 <li><a href="code.html">
-<span title="Random programs">Code</span>
+<span title="Random programs">Coding</span>
 </a></li>
 
 <li>
