--- a/code.html
+++ b/code.html
@@ -1,6 +1,7 @@
 <html>
-<title>Home lowagner</title>
+<title>Coding</title>
 <link href='primary.css' rel='stylesheet' type='text/css' />
+<link rel="shortcut icon" href="favicon.ico" />
 <body>
 <!-- Main title and what not. -->
 <div class=header> 
@@ -52,7 +53,7 @@ PyanoH3ro
 </a></li>
 
 <li> 
-<span title="Random programs">Code</span>
+<span title="Random programs">Coding</span>
 </li>
 
 <li><a href="about.html" title="About me">
