--- a/pub.html
+++ b/pub.html
@@ -1,6 +1,7 @@
 <html>
-<title>Publications lowagner</title>
+<title>Publications</title>
 <link href='primary.css' rel='stylesheet' type='text/css' />
+<link rel="shortcut icon" href="favicon.ico" />
 <body>
 <!-- Main title and what not. -->
 <div class=header> 
@@ -13,14 +14,130 @@
 
 <ul class=mainupdate>
 
+
+
 <li>
 <table>
 <tr>
-<td class=mainentrytitle>
-*.  
-<a href="pubs/BLAB.pdf">Beyond Burnside's Lemma </a>
+<td class=mainentryarticle>
+6.  
+<a href="pubs/WSBW13.pdf" target="wsbw13">
+Guaranteed convergence of the Kohn-Sham equations
+</a>
 </td>
-<td class=mainentrydate>
+<td class=mainentryyear>
+(2013)</td>
+</tr>
+</table>
+<p>
+Proving convergence of the Kohn-Sham algorithm using the 
+exact functional. 
+<a href="pubs/WSBW13err.pdf" target="wsbw13e">
+Erratum</a>.
+</p>
+<p class=tags>tags: DFT </p>
+</li>
+
+<li>
+<table>
+<tr>
+<td class=mainentryarticle>
+5.  
+<a href="pubs/BW13.pdf" target="bw13">
+DFT in a nutshell
+</a>
+</td>
+<td class=mainentryyear>
+(2013)</td>
+</tr>
+</table>
+<p>
+The basics of Kohn-Sham density functional theory.
+</p>
+<p class=tags>tags: DFT </p>
+</li>
+
+
+
+
+<li>
+<table>
+<tr>
+<td class=mainentryarticle>
+4.  
+<a href="pubs/SWWB12.pdf" target="swwb12">
+One-dimensional
+continuum electronic structure with the density-matrix renormalization group and its
+implications for density-functional theory
+</a>
+</td>
+<td class=mainentryyear>
+(2012)</td>
+</tr>
+</table>
+<p>
+Solving the many-electron Schr&ouml;dinger equation in the continuum 
+via the density matrix renormalization group, 
+and exploring the relationship between continuum and lattice models.
+</p>
+<p class=tags>tags: DFT, DMRG, 1d</p>
+</li>
+
+
+<li>
+<table>
+<tr>
+<td class=mainentryarticle>
+3.  
+<a href="pubs/WSBW12.pdf" target="wsbw12">
+Reference electronic structure calculations in one dimension
+</a>
+</td>
+<td class=mainentryyear>
+(2012)</td>
+</tr>
+</table>
+<p>
+Exact Kohn-Sham density functional theory in 1d, compared
+with the standard local density and Hartree-Fock approximations,
+for analogs of simple atoms and molecules.
+</p>
+<p class=tags>tags: DFT, DMRG, 1d</p>
+</li>
+
+
+
+<li>
+<table>
+<tr>
+<td class=mainentryarticle>
+2.  
+<a href="pubs/WYB12.pdf" target="wyb12">
+Exact conditions and their relevance in TDDFT
+</a>
+</td>
+<td class=mainentryyear>
+(2012)</td>
+</tr>
+</table>
+<p>
+Simple conditions on the exchange-correlation
+kernel <i>f<sub>xc</sub></i> within time-dependent density functional theory,
+with analogies to ground-state conditions.
+</p>
+<p class=tags>tags: DFT, TDDFT</p>
+</li>
+
+<li>
+<table>
+<tr>
+<td class=mainentryarticle>
+*.  
+<a href="pubs/BLAB.pdf" target="blab">
+Beyond Burnside's Lemma
+</a>
+</td>
+<td class=mainentryyear>
 (2008)</td>
 </tr>
 </table>
@@ -29,7 +146,29 @@ How to count the number of unique objects, painted various colors at
 different vertices, when group operations can rotate the object <i>and</i>
 permute the colors.
 </p>
-<p class=right>tags: group theory</p>
+<p class=tags>tags: group theory</p>
+</li>
+
+
+<li>
+<table>
+<tr>
+<td class=mainentryarticle>
+1.  
+<a href="pubs/NSCL.pdf" target="nscl">
+Production of nuclei in neutron unbound states
+via primary fragmentation of <sup>48</sup>Ca
+</a>
+</td>
+<td class=mainentryyear>
+(2008)</td>
+</tr>
+</table>
+<p>
+Work from a nuclear fragmentation experiment at the National Superconducting
+Cyclotron Laboratory at Michigan State University.
+</p>
+<p class=tags>tags: nuclear physics</p>
 </li>
 
 
@@ -57,7 +196,7 @@ permute the colors.
 </li>
 
 <li><a href="code.html">
-<span title="Random programs">Code</span>
+<span title="Random programs">Coding</span>
 </a></li>
 
 <li><a href="about.html" title="About me">
