--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <html>
-<title>Home lowagner</title>
+<title>Home</title>
 <link href='primary.css' rel='stylesheet' type='text/css' />
+<link rel="shortcut icon" href="favicon.ico" />
+
 <body>
 <!-- Main title and what not. -->
 <div class=header> 
-    <h2> Lucas O. Wagner </h2>
+<h2> Lucas O. Wagner </h2>
 </div>
 
 <!-- Main stuff to read and what not. -->
@@ -76,7 +78,7 @@ That is unbeknownst.  You are becoming unbeknownst.
 </a></li>
 
 <li><a href="code.html">
-<span title="Random programs">Code</span>
+<span title="Random programs">Coding</span>
 </a></li>
 
 <li><a href="about.html" title="About me">
