Trying to get favicon appearing...

--- a/pub.html
+++ b/pub.html
@@ -1,7 +1,7 @@
 <html>
 <title>Publications</title>
 <link href='primary.css' rel='stylesheet' type='text/css' />
-<link rel="shortcut icon" href="favicon.ico" />
+<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 <body>
 <!-- Main title and what not. -->
 <div class=header> 
