--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 <title>About</title>
 <link href='primary.css' rel='stylesheet' type='text/css' />
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+<link rel="icon" type="image/x-icon" href="favicon.ico" />
 <body>
 <!-- Main title and what not. -->
 <div class=header> 
