New look, lots new content

--- a/code.html
+++ b/code.html
@@ -5,28 +5,110 @@
 <link rel="icon" type="image/x-icon" href="favicon.ico" />
 <body>
 <!-- Main title and what not. -->
-<div class=header> 
-    <h2> Lucas O. Wagner </h2>
+
+<div class=header>
+<h2> lucas o. wagner @ play </h2>
+<ul>
+<li>
+<a href="#current">Current</a>
+</li>
+
+<li>
+<a href="#useful">Useful</a>
+</li>
+
+<li>
+<a href="#games">Games</a>
+</li>
+</ul>
 </div>
 
 <!-- Main stuff to read and what not. -->
 <div class=main>
-<h3>Random coding projects</h3>
+
+<a id="current">
+<h3>Current projects</h3>
+</a>
 
 <ul class=mainupdate>
 
 <li>
 <table>
 <tr>
-<td class=mainentrytitle>PyanoH3ro</td>
+<td class=mainentrytitle>PyanoH3ro <span style="font-weight:normal">(unreleased)</span></td>
 <td class=mainentrydate>2013-2014</td>
 </tr>
 </table>
 <p>
-PyanoH3ro
+PyanoH3ro will be a ripoff of some very similar sounding rhythm and band games.
+Heavily inspired by DDR, which is good for exercise, and a desire to make 
+these sorts of games helpful for actually learning music.
+</p>
+<p>
+I have high hopes that this will also be a very fun music composition tool.
+It is nearly complete (??), and I anticipate releasing some Youtube updates at 
+some point.
 </p>
 </li>
 
+
+<li>
+<table>
+<tr>
+<td class=mainentrytitle>Code-name Origin <span style="font-weight:normal">(unreleased)</span></td>
+<td class=mainentrydate>2014</td>
+</tr>
+</table>
+<p>
+An attempt at an RPG.
+</p>
+</li>
+
+
+<a id="useful">
+<h3>Useful</h3>
+</a>
+
+<li>
+<table>
+<tr>
+<td class=mainentrytitle><a href="https://github.com/lowagner/pynances" target="pynances">Pynances</a></td>
+<td class=mainentrydate>2013-2014</td>
+</tr>
+</table>
+<p>
+Pynances is a python-based utility for keeping track of your finances.
+I created it for my wife since we are in the challenging situation of being paid
+in two different currencies.  Download (or check out) from the
+<a href="https://github.com/lowagner/pynances" target="pynances">github</a>
+page.
+</p>
+</li>
+
+
+
+
+<a id="games">
+<h3>Games</h3>
+</a>
+
+
+
+<li>
+<table>
+<tr>
+<td class=mainentrytitle><a href="https://github.com/lowagner/walker" target="walker">Walker</a></td>
+<td class=mainentrydate>2009-2013 (??)</td>
+</tr>
+</table>
+<p>
+Walker is a game where you must find safe passageway through a dungeon.
+Mostly coded around December 2009.
+It has spectacular graphics for the terminal. Download from the 
+<a href="https://github.com/lowagner/walker" target="walker">github</a>
+page.
+</p>
+</li>
 
 
 
@@ -37,34 +119,35 @@ PyanoH3ro
 </div>
 <!-- END main stuff to read and what not. -->
 
-
 <!-- Main links and menu what not. -->
 <div class=col1> 
 
-<h4>Internal menu</h4>
+<h4>menu</h4>
 
-<ul class=colmenu>
+<ul>
 
-<li><a href="index.html" title="Back to home">
-<span>Home</span>
-</a></li>
-
-<li><a href="pub.html" title="My publications">
-<span>Publications</span>
-</a></li>
-
-<li> 
-<span title="Random programs">Coding</span>
+<li>
+<a href="index.html" title="go back home">
+Home
+</a>
 </li>
 
-<li><a href="about.html" title="About me">
-<span>About</span>
+<li><a href="pub.html" title="my publications">
+Publications
+</a></li>
+
+<li><span>
+Coding
+</span></li>
+
+<li><a href="about.html" title="about me">
+About
 </a></li>
 
 <br>
 
 <li><a href="LucasWagner-CV.pdf" target="lowblog" title="My curriculum vitae">
-<span>My CV</span>
+My CV
 </a></li>
 
 </ul>
@@ -76,30 +159,26 @@ PyanoH3ro
 <!-- Not main links and menu what not. -->
 <div class=col2> 
 
-<h4>Find me on...</h4>
+<h4>find me on...</h4>
 
-<ul class=colmenu>
+<ul>
 
 <li><a href="http://scholar.google.com/citations?user=sbRpEIcAAAAJ&hl=en" target="lowscholar">
-<span>Google scholar</span>
+Google scholar
 </a></li>
 
 <li><a href="http://www.github.com/lowagner" target="lowgithub">
-<span>Github</span>
+Github
 </a></li>
 
 <li><a href="http://uncalc.blogspot.com/" target="lowblog">
-<span>My Blog</span>
+A blog
 </a></li>
 
 </ul>
 
 </div>
 <!-- END not main links and menu what not. -->
-
-
-
-
 
 
 
