--- a/index.html
+++ b/index.html
@@ -6,8 +6,18 @@
 
 <body>
 <!-- Main title and what not. -->
-<div class=header> 
-<h2> Lucas O. Wagner </h2>
+<div class=header>
+<h2> lucas o. wagner </h2>
+<ul>
+<li>
+<a href="#hello">Hello</a>
+</li>
+
+<li>
+<a href="#world">World</a>
+</li>
+
+</ul>
 </div>
 
 <!-- Main stuff to read and what not. -->
@@ -66,30 +76,30 @@ That is unbeknownst.  You are becoming unbeknownst.
 <!-- Main links and menu what not. -->
 <div class=col1> 
 
-<h4>Internal menu</h4>
+<h4>menu</h4>
 
-<ul class=colmenu>
+<ul>
 
 <li>
 <span>Home</span>
 </li>
 
-<li><a href="pub.html" title="My publications">
-<span>Publications</span>
+<li><a href="pub.html" title="my publications">
+Publications
 </a></li>
 
-<li><a href="code.html">
-<span title="Random programs">Coding</span>
+<li><a href="code.html" title="my programming">
+Coding
 </a></li>
 
-<li><a href="about.html" title="About me">
-<span>About</span>
+<li><a href="about.html" title="about me">
+About
 </a></li>
 
 <br>
 
 <li><a href="LucasWagner-CV.pdf" target="lowblog" title="My curriculum vitae">
-<span>My CV</span>
+My CV
 </a></li>
 
 </ul>
@@ -101,20 +111,20 @@ That is unbeknownst.  You are becoming unbeknownst.
 <!-- Not main links and menu what not. -->
 <div class=col2> 
 
-<h4>Find me on...</h4>
+<h4>find me on...</h4>
 
-<ul class=colmenu>
+<ul>
 
 <li><a href="http://scholar.google.com/citations?user=sbRpEIcAAAAJ&hl=en" target="lowscholar">
-<span>Google scholar</span>
+Google scholar
 </a></li>
 
 <li><a href="http://www.github.com/lowagner" target="lowgithub">
-<span>Github</span>
+Github
 </a></li>
 
 <li><a href="http://uncalc.blogspot.com/" target="lowblog">
-<span>My Blog</span>
+A blog
 </a></li>
 
 </ul>
