--- a/pub.html
+++ b/pub.html
@@ -5,8 +5,23 @@
 <link rel="icon" type="image/x-icon" href="favicon.ico" />
 <body>
 <!-- Main title and what not. -->
-<div class=header> 
-    <h2> Lucas O. Wagner </h2>
+<div class=header>
+<h2> lucas o. wagner @ work </h2>
+<ul>
+<li>
+<a href="#2008">2008</a>
+</li>
+
+<li>
+<a href="#2012">2012</a>
+</li>
+
+<li>
+<a href="#2013">2013</a>
+</li>
+
+
+</ul>
 </div>
 
 <!-- Main stuff to read and what not. -->
@@ -21,7 +36,7 @@
 <table>
 <tr>
 <td class=mainentryarticle>
-6.  
+<a id="2013">6.  </a>
 <a href="pubs/WSBW13.pdf" target="wsbw13">
 Guaranteed convergence of the Kohn-Sham equations
 </a>
@@ -65,7 +80,7 @@ The basics of Kohn-Sham density functional theory.
 <table>
 <tr>
 <td class=mainentryarticle>
-4.  
+<a id="2012">4.  </a>
 <a href="pubs/SWWB12.pdf" target="swwb12">
 One-dimensional
 continuum electronic structure with the density-matrix renormalization group and its
@@ -133,13 +148,15 @@ with analogies to ground-state conditions.
 <table>
 <tr>
 <td class=mainentryarticle>
-*.  
+<a id="2008">*.  </a>
 <a href="pubs/BLAB.pdf" target="blab">
 Beyond Burnside's Lemma
 </a>
 </td>
 <td class=mainentryyear>
-(2008)</td>
+(2008)
+</td>
+</td>
 </tr>
 </table>
 <p>
@@ -184,30 +201,32 @@ Cyclotron Laboratory at Michigan State University.
 <!-- Main links and menu what not. -->
 <div class=col1> 
 
-<h4>Internal menu</h4>
+<h4>menu</h4>
 
-<ul class=colmenu>
+<ul>
 
-<li><a href="index.html" title="Back to home">
-<span>Home</span>
-</a></li>
+<li>
+<a href="index.html" title="go back home">
+Home
+</a>
+</li>
 
 <li>
 <span>Publications</span>
 </li>
 
-<li><a href="code.html">
-<span title="Random programs">Coding</span>
+<li><a href="code.html" title="my programming">
+Coding
 </a></li>
 
-<li><a href="about.html" title="About me">
-<span>About</span>
+<li><a href="about.html" title="about me">
+About
 </a></li>
 
 <br>
 
 <li><a href="LucasWagner-CV.pdf" target="lowblog" title="My curriculum vitae">
-<span>My CV</span>
+My CV
 </a></li>
 
 </ul>
@@ -219,30 +238,26 @@ Cyclotron Laboratory at Michigan State University.
 <!-- Not main links and menu what not. -->
 <div class=col2> 
 
-<h4>Find me on...</h4>
+<h4>find me on...</h4>
 
-<ul class=colmenu>
+<ul>
 
 <li><a href="http://scholar.google.com/citations?user=sbRpEIcAAAAJ&hl=en" target="lowscholar">
-<span>Google scholar</span>
+Google scholar
 </a></li>
 
 <li><a href="http://www.github.com/lowagner" target="lowgithub">
-<span>Github</span>
+Github
 </a></li>
 
 <li><a href="http://uncalc.blogspot.com/" target="lowblog">
-<span>My Blog</span>
+A blog
 </a></li>
 
 </ul>
 
 </div>
 <!-- END not main links and menu what not. -->
-
-
-
-
 
 
 
