--- a/about.html
+++ b/about.html
@@ -5,8 +5,21 @@
 <link rel="icon" type="image/x-icon" href="favicon.ico" />
 <body>
 <!-- Main title and what not. -->
-<div class=header> 
-    <h2> Lucas O. Wagner </h2>
+<div class=header>
+<h2> about - lucas o. wagner </h2>
+<ul>
+<li>
+<a href="#research">Research</a>
+</li>
+
+<li>
+<a href="#program">Programming</a>
+</li>
+
+<li>
+<a href="#life">Life</a>
+</li>
+</ul>
 </div>
 
 <!-- Main stuff to read and what not. -->
@@ -18,12 +31,69 @@
 <li>
 <table>
 <tr>
-<td class=mainentrytitle>Existence</td>
-<td class=mainentrydate>circa 1980s</td>
+<td class=mainentryfull>
+<a id="research">
+Research interests
+</a>
+</td>
+<!--<td class=mainentrydate>circa 1980s</td>-->
 </tr>
 </table>
 <p>
-Hello
+My interest is in the methods used to tackle
+the quantum many-body problem, specifically in the realm of electronic structure. 
+ I seek to understand and develop
+insightful approaches, and test approximations by writing code.
+</p>
+
+<p>
+In addition to original research papers, I write articles to 
+explain the theories and approximations in use.  See my <a href="pub.html">Publications</a>.
+I may also <a href="http://uncalc.blogspot.com/" target="lowblog">blog</a> about
+some interesting theories from time to time.
+</p>
+
+</li>
+
+
+<li>
+<table>
+<tr>
+<td class=mainentryfull>
+<a id="program">
+Programming interests
+</a>
+</td>
+<!--<td class=mainentrydate>circa 1980s</td>-->
+</tr>
+</table>
+<p>
+I enjoy coding and pretending to make games or other useful content.
+Check out my <a href="code.html">Coding</a> webpage.  Various "helpful" code-snippets 
+may also appear on <a href="http://uncalc.blogspot.com/" target="lowblog">my blog</a>, in addition
+to other things.
+</p>
+</li>
+
+
+<li>
+<table>
+<tr>
+<td class=mainentryfull>
+<a id="life">
+Loving justice, mercy, and walking humbly
+</a>
+</td>
+<!--<td class=mainentrydate>circa 1980s</td>-->
+</tr>
+</table>
+<p>
+... is the life-goal, but not something I do do very well naturally.  
+For a long time I thought I knew God, and yet was so far
+from being blameless, or even trusting God.  I realized that with
+the help of some friends and divine lighting.  
+I found both mercy and conviction in
+the once and future king, Jesus.  
 </p>
 </li>
 
@@ -37,34 +107,35 @@ Hello
 </div>
 <!-- END main stuff to read and what not. -->
 
-
 <!-- Main links and menu what not. -->
 <div class=col1> 
 
-<h4>Internal menu</h4>
+<h4>menu</h4>
 
-<ul class=colmenu>
-
-<li><a href="index.html" title="Back to home">
-<span>Home</span>
-</a></li>
-
-<li><a href="pub.html" title="My publications">
-<span>Publications</span>
-</a></li>
-
-<li><a href="code.html">
-<span title="Random programs">Coding</span>
-</a></li>
+<ul>
 
 <li>
-<span>About</span>
+<a href="index.html" title="go back home">
+Home
+</a>
 </li>
+
+<li><a href="pub.html" title="my publications">
+Publications
+</a></li>
+
+<li><a href="code.html" title="my programming">
+Coding
+</a></li>
+
+<li><span>
+About
+</span></li>
 
 <br>
 
 <li><a href="LucasWagner-CV.pdf" target="lowblog" title="My curriculum vitae">
-<span>My CV</span>
+My CV
 </a></li>
 
 </ul>
@@ -76,31 +147,26 @@ Hello
 <!-- Not main links and menu what not. -->
 <div class=col2> 
 
-<h4>Find me on...</h4>
+<h4>find me on...</h4>
 
-<ul class=colmenu>
+<ul>
 
 <li><a href="http://scholar.google.com/citations?user=sbRpEIcAAAAJ&hl=en" target="lowscholar">
-<span>Google scholar</span>
+Google scholar
 </a></li>
 
 <li><a href="http://www.github.com/lowagner" target="lowgithub">
-<span>Github</span>
+Github
 </a></li>
 
 <li><a href="http://uncalc.blogspot.com/" target="lowblog">
-<span>My Blog</span>
+A blog
 </a></li>
 
 </ul>
 
 </div>
 <!-- END not main links and menu what not. -->
-
-
-
-
-
 
 
 </body>
