Some style changes, some new content.

--- a/about.html
+++ b/about.html
@@ -4,9 +4,12 @@
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 <link rel="icon" type="image/x-icon" href="favicon.ico" />
 <body>
+<a id="top"> </a>
+
+
 <!-- Main title and what not. -->
 <div class=header>
-<h2> about - lucas o. wagner </h2>
+<h2> about lucas o. wagner </h2>
 <ul>
 <li>
 <a href="#research">Research</a>
@@ -22,19 +25,21 @@
 </ul>
 </div>
 
+
+
 <!-- Main stuff to read and what not. -->
 <div class=main>
 <h3>About me</h3>
 
-<ul class=mainupdate>
+<ul>
 
 <li>
 <table>
 <tr>
 <td class=mainentryfull>
 <a id="research">
-Research interests
 </a>
+Research interests
 </td>
 <!--<td class=mainentrydate>circa 1980s</td>-->
 </tr>
@@ -61,15 +66,19 @@ some interesting theories from time to time.
 <tr>
 <td class=mainentryfull>
 <a id="program">
-Programming interests
 </a>
+Programming interests
 </td>
 <!--<td class=mainentrydate>circa 1980s</td>-->
 </tr>
 </table>
 <p>
-I enjoy coding and pretending to make games or other useful content.
-Check out my <a href="code.html">Coding</a> webpage.  Various "helpful" code-snippets 
+In addition to coding for research,
+I enjoy attempting to make games and other useful content.
+Check out my <a href="code.html">coding</a> webpage for links of what I've done
+in the past and what I'm working on now.
+I support open source programming, so most of the releasable code is here on github.
+Various "helpful" code-snippets 
 may also appear on <a href="http://uncalc.blogspot.com/" target="lowblog">my blog</a>, in addition
 to other things.
 </p>
@@ -81,8 +90,8 @@ to other things.
 <tr>
 <td class=mainentryfull>
 <a id="life">
-Loving justice, mercy, and walking humbly
 </a>
+Loving justice, mercy, and walking humbly
 </td>
 <!--<td class=mainentrydate>circa 1980s</td>-->
 </tr>
@@ -93,7 +102,7 @@ For a long time I thought I knew God, and yet was so far
 from being blameless, or even trusting God.  I realized that with
 the help of some friends and divine lighting.  
 I found both mercy and conviction in
-the once and future king, Jesus.  
+the once and future king, Jesus.  I enjoy philosophy
 </p>
 </li>
 
@@ -106,6 +115,9 @@ the once and future king, Jesus.
 
 </div>
 <!-- END main stuff to read and what not. -->
+
+
+
 
 <!-- Main links and menu what not. -->
 <div class=col1> 
@@ -167,7 +179,6 @@ A blog
 
 </div>
 <!-- END not main links and menu what not. -->
-
 
 </body>
 
