--- a/code.html
+++ b/code.html
@@ -4,6 +4,7 @@
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 <link rel="icon" type="image/x-icon" href="favicon.ico" />
 <body>
+<a id="top"> </a>
 <!-- Main title and what not. -->
 
 <div class=header>
@@ -30,7 +31,7 @@
 <h3>Current projects</h3>
 </a>
 
-<ul class=mainupdate>
+<ul>
 
 <li>
 <table>
@@ -111,6 +112,11 @@ page.
 </li>
 
 
+<center>
+<b>
+<a href="#top">Back to top</a>
+</b>
+</center>
 
 </ul>
 
