--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 <link rel="icon" type="image/x-icon" href="favicon.ico" />
 
 <body>
+<a id="top"> </a>
+
+
 <!-- Main title and what not. -->
 <div class=header>
 <h2> lucas o. wagner </h2>
@@ -20,50 +23,34 @@
 </ul>
 </div>
 
+
+
+
 <!-- Main stuff to read and what not. -->
 <div class=main>
-<h3>Main</h3>
+<a id="hello"></a>
+<h3>Hello</h3>
 
-<ul class=mainupdate>
-
-<li>
-<table>
-<tr>
-<td class=mainentrytitle>Furst entry:  testing how long</td>
-<td class=mainentrydate>circa 2014-03-07</td>
-</tr>
-</table>
-<p>
-Here shall begin all the very important
-updates to life and other things.
-This should always be up to date and
-not have any irrelevant unimportant objects
-on it.  This is definitely not repeating
-the same redundant statements over and over
-and over, but rather it is simply making
-it very clear that this website is for
-only very good and useful purposes.
-</p>
-</li>
-
+<ul>
 
 <li>
 <table>
 <tr>
-<td class=mainentrytitle>Furst entry:  testing how long</td>
-<td class=mainentrydate>circa 2014-03-07</td>
+<td class=mainentrytitle>Last update</td>
+<td class=mainentrydate>2014-03-12</td>
 </tr>
 </table>
-<p>
-This is actually a duplicate of the first entry.
-Why do you suppose I would do this to you?
-Why do you suppose I would do this to me?
-Why is the colors in the primary colors of light?
-That is unbeknownst.  You are becoming unbeknownst.
+<p> TODO:  add co-authors to publications. 
+Get a picture in here somewhere...
 </p>
 </li>
 
 
+<a id="world"></a>
+<h3>World</h3>
+<center>
+<p><i> Last updated:  2014-03-12</i> </p>
+</center>
 
 </ul>
 
@@ -71,7 +58,6 @@ That is unbeknownst.  You are becoming unbeknownst.
 
 </div>
 <!-- END main stuff to read and what not. -->
-
 
 <!-- Main links and menu what not. -->
 <div class=col1> 
@@ -131,10 +117,6 @@ A blog
 
 </div>
 <!-- END not main links and menu what not. -->
-
-
-
-
 
 
 
