--- a/pub.html
+++ b/pub.html
@@ -4,9 +4,23 @@
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 <link rel="icon" type="image/x-icon" href="favicon.ico" />
 <body>
+<a id="top"> </a>
+
+<!-- Main stuff to read and what not. -->
+
+
+
+
+
+
+
+
+
+
 <!-- Main title and what not. -->
 <div class=header>
 <h2> lucas o. wagner @ work </h2>
+
 <ul>
 <li>
 <a href="#2008">2008</a>
@@ -19,24 +33,23 @@
 <li>
 <a href="#2013">2013</a>
 </li>
-
-
 </ul>
+
 </div>
 
-<!-- Main stuff to read and what not. -->
+
 <div class=main>
 <h3>Publications</h3>
 
-<ul class=mainupdate>
+<ul>
 
 
-
+<a id="2013"></a>
 <li>
 <table>
 <tr>
 <td class=mainentryarticle>
-<a id="2013">6.  </a>
+6.
 <a href="pubs/WSBW13.pdf" target="wsbw13">
 Guaranteed convergence of the Kohn-Sham equations
 </a>
@@ -76,11 +89,12 @@ The basics of Kohn-Sham density functional theory.
 
 
 
+<a id="2012"></a>
 <li>
 <table>
 <tr>
 <td class=mainentryarticle>
-<a id="2012">4.  </a>
+4.
 <a href="pubs/SWWB12.pdf" target="swwb12">
 One-dimensional
 continuum electronic structure with the density-matrix renormalization group and its
@@ -144,11 +158,12 @@ with analogies to ground-state conditions.
 <p class=tags>tags: DFT, TDDFT</p>
 </li>
 
+<a id="2008"></a>
 <li>
 <table>
 <tr>
 <td class=mainentryarticle>
-<a id="2008">*.  </a>
+*. 
 <a href="pubs/BLAB.pdf" target="blab">
 Beyond Burnside's Lemma
 </a>
@@ -189,6 +204,11 @@ Cyclotron Laboratory at Michigan State University.
 <p class=tags>tags: nuclear physics</p>
 </li>
 
+<center>
+<b>
+<a href="#top">Back to top</a>
+</b>
+</center>
 
 </ul>
 
@@ -196,7 +216,6 @@ Cyclotron Laboratory at Michigan State University.
 
 </div>
 <!-- END main stuff to read and what not. -->
-
 
 <!-- Main links and menu what not. -->
 <div class=col1> 
@@ -258,7 +277,6 @@ A blog
 
 </div>
 <!-- END not main links and menu what not. -->
-
 
 
 </body>
