New back to top on about

--- a/about.html
+++ b/about.html
@@ -102,10 +102,16 @@ For a long time I thought I knew God, and yet was so far
 from being blameless, or even trusting God.  I realized that with
 the help of some friends and divine lighting.  
 I found both mercy and conviction in
-the once and future king, Jesus.  I enjoy philosophy
+the once and future king, Jesus.
 </p>
 </li>
 
+
+<center>
+<b>
+<a href="#top">Back to top</a>
+</b>
+</center>
 
 
 
