Awesome color scheme

--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@ Programming interests
 <p>
 In addition to coding for research,
 I enjoy attempting to make games and other useful content.
-Check out my <a href="code.html">coding</a> webpage for links of what I've done
+Check out my <a href="code.html asdf">coding</a> webpage for links of what I've done
 in the past and what I'm working on now.
 I support open source programming, so most of the releasable code is here on github.
 Various "helpful" code-snippets 
@@ -108,9 +108,7 @@ the once and future king, Jesus.
 
 
 <center>
-<b>
 <a href="#top">Back to top</a>
-</b>
 </center>
 
 
