--- a/about.html
+++ b/about.html
@@ -11,6 +11,11 @@
 <div class=header>
 <h2> about lucas o. wagner </h2>
 <ul>
+
+<li>
+<a href="#contact">Contact</a>
+</li>
+
 <li>
 <a href="#research">Research</a>
 </li>
@@ -33,12 +38,39 @@
 
 <ul>
 
+
+<a id="contact">
+</a>
 <li>
 <table>
 <tr>
 <td class=mainentryfull>
+Contact
+</td>
+</tr>
+</table>
+<p>Present affiliation:</p>
+
+<p class=tab>
+Department of Theoretical Chemistry - Faculty of Sciences<br>
+Vrije Universiteit Amsterdam<br>
+De Boelelaan 1083<br>
+1081 HV Amsterdam, The Netherlands
+</p>
+
+<p>Electronic mail address:</p>
+<p class=tab> l o wagner at g mail dot com</p>
+</li>
+
+
+
+
 <a id="research">
 </a>
+<li>
+<table>
+<tr>
+<td class=mainentryfull>
 Research interests
 </td>
 <!--<td class=mainentrydate>circa 1980s</td>-->
@@ -61,12 +93,12 @@ some interesting theories from time to time.
 </li>
 
 
+<a id="program">
+</a>
 <li>
 <table>
 <tr>
 <td class=mainentryfull>
-<a id="program">
-</a>
 Programming interests
 </td>
 <!--<td class=mainentrydate>circa 1980s</td>-->
@@ -85,12 +117,12 @@ to other things.
 </li>
 
 
+<a id="life">
+</a>
 <li>
 <table>
 <tr>
 <td class=mainentryfull>
-<a id="life">
-</a>
 Loving justice, mercy, and walking humbly
 </td>
 <!--<td class=mainentrydate>circa 1980s</td>-->
