--- a/code.html
+++ b/code.html
@@ -47,23 +47,12 @@ these sorts of games helpful for actually learning music.
 </p>
 <p>
 I have high hopes that this will also be a very fun music composition tool.
-It is nearly complete (??), and I anticipate releasing some Youtube updates at 
-some point.
+It is nearly complete (??), but until release check out my 
+<a href="https://www.youtube.com/user/ilictis" target="youtubes">Youtube videos</a>
+on it.
 </p>
 </li>
 
-
-<li>
-<table>
-<tr>
-<td class=mainentrytitle>Code-name Origin <span style="font-weight:normal">(unreleased)</span></td>
-<td class=mainentrydate>2014</td>
-</tr>
-</table>
-<p>
-An attempt at an RPG.
-</p>
-</li>
 
 
 <a id="useful">
