--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 <li>
 <table>
 <tr>
-<td class=mainentrytitle>Last update</td> <!-- last update -->
-<td class=mainentrydate>2014-03-17</td>
+<td class=mainentrytitle>A todo list...</td> 
+<td class=mainentrydate>2014-03-14</td>
 </tr>
 </table>
 <p> TODO:  add co-authors to publications. 
@@ -49,7 +49,7 @@ Get a picture in here somewhere...
 <a id="world"></a>
 <h3>World</h3>
 <center>
-<p><i> Last updated:  2014-03-14</i> </p>
+<p><i> Last updated:  2014-03-17</i> </p><!-- last update -->
 </center>
 
 </ul>
