Fixed micah quote

--- a/about.html
+++ b/about.html
@@ -123,7 +123,7 @@ to other things.
 <table>
 <tr>
 <td class=mainentryfull>
-Loving justice, mercy, and walking humbly
+Doing justice, loving mercy, and walking humbly
 </td>
 <!--<td class=mainentrydate>circa 1980s</td>-->
 </tr>
