New mug shot, a bit more stylings.  Also added coauthors.

--- a/index.html
+++ b/index.html
@@ -28,31 +28,19 @@
 
 <!-- Main stuff to read and what not. -->
 <div class=main>
+<img src="mug.jpg" alt="my face" style="float:right;margin:30 0 30px 0;border-style:solid;border-color:#201515;border-width:0 2 2 0;">
+
 <a id="hello"></a>
 <h3>Hello</h3>
 
-<ul>
 
-<li>
-<table>
-<tr>
-<td class=mainentrytitle>A todo list...</td> 
-<td class=mainentrydate>2014-03-14</td>
-</tr>
-</table>
-<p> TODO:  add co-authors to publications. 
-Get a picture in here somewhere...
-</p>
-</li>
-
+<br>
 
 <a id="world"></a>
 <h3>World</h3>
 <center>
 <p><i> Last updated:  2014-03-17</i> </p><!-- last update -->
 </center>
-
-</ul>
 
 
 
