--- a/pub.html
+++ b/pub.html
@@ -48,14 +48,16 @@
 <li>
 <table>
 <tr>
-<td class=mainentryarticle>
+<td class=number>
 6.
-<a href="pubs/WSBW13.pdf" target="wsbw13">
-Guaranteed convergence of the Kohn-Sham equations
-</a>
 </td>
-<td class=mainentryyear>
-(2013)</td>
+<td class=wideentry>
+L.O. Wagner, E.M. Stoudenmire, K. Burke, S.R. White,
+<a href="pubs/WSBW13.pdf" target="wsbw13">
+Guaranteed convergence of the Kohn-Sham equations</a>,
+<i>Phys. Rev. Lett.</i> <b>111</b>, 093003 (2013):  <b>Editors' suggestion</b>;
+<i>ibid</i>. <b>112</b>, 019901(E) (2014).
+</td>
 </tr>
 </table>
 <p>
@@ -70,14 +72,14 @@ Erratum</a>.
 <li>
 <table>
 <tr>
-<td class=mainentryarticle>
+<td class=number>
 5.  
+</td><td class=wideentry>
+K. Burke and L.O. Wagner,
 <a href="pubs/BW13.pdf" target="bw13">
-DFT in a nutshell
-</a>
+DFT in a nutshell</a>,
+<i>Int. J. Quant. Chem.</i> <b>113</b>, 96-101 (2013).
 </td>
-<td class=mainentryyear>
-(2013)</td>
 </tr>
 </table>
 <p>
@@ -93,16 +95,16 @@ The basics of Kohn-Sham density functional theory.
 <li>
 <table>
 <tr>
-<td class=mainentryarticle>
+<td class=number>
 4.
+</td><td class=wideentry>
+E.M. Stoudenmire, L.O. Wagner, S.R. White, and K. Burke, 
 <a href="pubs/SWWB12.pdf" target="swwb12">
 One-dimensional
 continuum electronic structure with the density-matrix renormalization group and its
-implications for density-functional theory
-</a>
+implications for density-functional theory</a>,
+<i>Phys. Rev. Lett.</i> <b>109</b>, 056402 (2012).
 </td>
-<td class=mainentryyear>
-(2012)</td>
 </tr>
 </table>
 <p>
@@ -117,14 +119,14 @@ and exploring the relationship between continuum and lattice models.
 <li>
 <table>
 <tr>
-<td class=mainentryarticle>
+<td class=number>
 3.  
+</td><td class=wideentry>
+L.O. Wagner, E.M. Stoudenmire, K. Burke, S.R. White, 
 <a href="pubs/WSBW12.pdf" target="wsbw12">
-Reference electronic structure calculations in one dimension
-</a>
+Reference electronic structure calculations in one dimension</a>,
+<i>Phys. Chem. Chem. Phys.</i> <b>14</b>, 8581-8590, (2012).
 </td>
-<td class=mainentryyear>
-(2012)</td>
 </tr>
 </table>
 <p>
@@ -140,20 +142,24 @@ for analogs of simple atoms and molecules.
 <li>
 <table>
 <tr>
-<td class=mainentryarticle>
-2.  
+<td class=number>
+2. 
+</td><td class=wideentry>
+L.O. Wagner, Z.-hui Yang, and K. Burke,  
 <a href="pubs/WYB12.pdf" target="wyb12">
-Exact conditions and their relevance in TDDFT
-</a>
+Exact conditions and their relevance in TDDFT</a>,
+in <i>Fundamentals of Time-Dependent Density Functional Theory</i>, Lecture
+Notes in Physics No. 837, edited by M.A.L. Marques, N.T. Maitra, F.M.S. Nogueira,
+E.K.U. Gross, and A. Rubio (Springer, 2012) Chap. 5, pp. 101-122.
 </td>
-<td class=mainentryyear>
-(2012)</td>
+
 </tr>
 </table>
+
 <p>
 Simple conditions on the exchange-correlation
 kernel <i>f<sub>xc</sub></i> within time-dependent density functional theory,
-with analogies to ground-state conditions.
+and analogies to ground-state conditions.
 </p>
 <p class=tags>tags: DFT, TDDFT</p>
 </li>
@@ -162,15 +168,13 @@ with analogies to ground-state conditions.
 <li>
 <table>
 <tr>
-<td class=mainentryarticle>
+<td class=number>
 *. 
+</td><td class=wideentry>
+L.O. Wagner,
 <a href="pubs/BLAB.pdf" target="blab">
-Beyond Burnside's Lemma
-</a>
-</td>
-<td class=mainentryyear>
-(2008)
-</td>
+Beyond Burnside's Lemma</a>,
+<i>Rose-Hulman Undergraduate Mathematics Journal</i> <b>9</b>, 2 (2008).
 </td>
 </tr>
 </table>
@@ -186,15 +190,15 @@ permute the colors.
 <li>
 <table>
 <tr>
-<td class=mainentryarticle>
+<td class=number>
 1.  
+</td><td class=wideentry>
+G. Christian, <i>et al</i>.
 <a href="pubs/NSCL.pdf" target="nscl">
 Production of nuclei in neutron unbound states
-via primary fragmentation of <sup>48</sup>Ca
-</a>
+via primary fragmentation of <sup>48</sup>Ca</a>,
+<i>Nuclear Physics A</i> <b>801</b>, 101-113 (2008).
 </td>
-<td class=mainentryyear>
-(2008)</td>
 </tr>
 </table>
 <p>
