New index, moved contact info to home.

--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
 <div class=header>
 <h2> lucas o. wagner </h2>
 <ul>
+
 <li>
-<a href="#hello">Hello</a>
+<a href="#hello">Hello!</a>
 </li>
 
 <li>
-<a href="#world">World</a>
+<a href="#contact">Contact</a>
 </li>
 
 </ul>
@@ -28,21 +29,61 @@
 
 <!-- Main stuff to read and what not. -->
 <div class=main>
-<img src="mug.jpg" alt="my face" style="float:right;margin:30 0 30px 0;border-style:solid;border-color:#201515;border-width:0 2 2 0;">
+
+<ul>
+
+
 
 <a id="hello"></a>
-<h3>Hello</h3>
+<h3>Hello!</h3>
+
+<li>
+<table class=nostyle>
+<tr>
+<td>
+<p class=withstyle> My name is Lucas Wagner.</p>
+<p class=withstyle>For a living, I do research in theoretical physics
+and chemistry, and I enjoy coding on the side.
+</p>
+
+</td>
+<td>
+<img src="mug.jpg" alt="my face" style="display:block;margin:10 -5 10px 0;border-style:solid;border-color:#201515;border-width:0 2 2 0;" height="150" width="144">
+</td>
+</tr>
+</table>
+</li>
 
 
-<br>
+<a id="contact"></a>
+<li>
+<table>
+<tr>
+<td class=mainentryfull>
+Contact
+</td>
+</tr>
+</table>
+<p>Present affiliation:</p>
 
-<a id="world"></a>
-<h3>World</h3>
+<p class=tab>
+Department of Theoretical Chemistry - Faculty of Sciences<br>
+Vrije Universiteit Amsterdam<br>
+De Boelelaan 1083<br>
+1081 HV Amsterdam, The Netherlands
+</p>
+
+<p>Electronic mail address:</p>
+<p class=tab> l o wagner at g mail dot com</p>
+</li>
+
+
+
 <center>
 <p><i> Last updated:  2014-03-17</i> </p><!-- last update -->
 </center>
 
-
+</ul>
 
 </div>
 <!-- END main stuff to read and what not. -->
